Fixed footer font weight for legibility

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -229,6 +229,7 @@ footer {
 
 footer p {
     font-size: 1rem;
+    font-weight: 600;
 }
 
 footer div {
